# PCB_Badge

./: CMakeLists.txt  README.md  matrix_helper.py
examples/: 2048.cpp  bounce.cpp  bunnies.cpp  cycle.cpp  dice.cpp  digits3x5.hpp  dimmer.cpp  dino.cpp  doom.cpp  eye.cpp  eye_anim.hpp  fire.cpp  fireworks.cpp  flappy.cpp  font5x7.hpp  glide.cpp  gray.cpp  heart.cpp  hello.cpp  hello2.cpp  hello3.cpp  hello4.cpp  hello5.cpp  kaleidoscope.cpp  lichtkrant.cpp  life.cpp  plasma.cpp  pong.cpp  racing.cpp  rain.cpp  simon.cpp  snake.cpp  spiral.cpp  spiral2.cpp  spiral3.cpp  starfield.cpp  start_here.cpp  tetris.cpp  tetris2.cpp  tictactoe.cpp  (+7 more)
sdk/: Badge.cpp  Badge.hpp  KimsPower.cpp  KimsPower.hpp  Ticker.hpp
